fix:물품등록페이지 수정 1차 및 넥스트 옵션 조정 react-select삭제

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,8 @@
     -webkit-appearance: none;
     margin: 0;
   }
- 
+    /* className="w-[250px] h-[50px] border rounded-xl text-center outline-[#000] */
+
 }
 
 
