bidding페이지 스크롤바 삭제

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,9 @@
     margin: 0;
   }
     /* className="w-[250px] h-[50px] border rounded-xl text-center outline-[#000] */
-
+  .no_scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 
