콘솔로그 삭제 몇몇 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,10 @@ body {
   font-family: 'Pretendard';
   background-color: #222;
 }
+
+@font-face {
+  font-family: 'CoolGuy-Medium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2403@1.0/CoolGuy-Medium.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
